# projeto-final

./: .gitignore  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
Relatório Técnico/: PDSCasoDeUso.drawio
compose/django/: start
core/: admin.py  forms.py  models.py  roles.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_cliente_saldo.py  0003_alter_veiculo_foto_url.py  0004_rename_endereco_cliente_rua.py
core/static/core/css/: style.css
core/templates/: base.html  confirmar_remocao.html  deletar_conta.html  editar_perfil.html  formveiculo.html  home.html  infos.html  login.html  paginacao.html  painel.html  perfil.html  registro_usu.html
core/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
core/templatetags/: url_extras.py
project_fin/: asgi.py  settings.py  urls.py  wsgi.py
projeto_carros.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
users/: models.py
users/migrations/: 0001_initial.py
